change name and add author

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "loan",
+  "name": "bring-it-up",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Andrey Kudinov",
   "license": "ISC",
   "browserslist": [
     "> 1%",
